--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 binrw = "0.13.3"
+chumsky = { git = "https://github.com/zesterer/chumsky.git" }
 clap = { version = "4.4.18", features = ["derive"] }
 derivative = "2.2.0"
 human_bytes = "0.4.3"
